--- a/CT_Workbook_2026.ipynb
+++ b/CT_Workbook_2026.ipynb
@@ -758,13 +758,32 @@
         "    steps : int\n",
         "        Number of time steps to simulate.\n",
         "    \"\"\"\n",
-        "    return populations"
+        "    p = p0 populations+ [p]\n",
+        "    for i in range (steps):\n",
+        "    dp r * p*b(1-p/K) *dt\n",
+        "    p += d[]\n",
+        "    population.append (p)\n",
+        "    return.population"
       ],
       "metadata": {
-        "id": "fhmOO0OMdDva"
+        "id": "fhmOO0OMdDva",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "outputId": "02c719cf-ca37-456f-9389-efe7c83742b9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (ipython-input-1923955282.py, line 18)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-1923955282.py\"\u001b[0;36m, line \u001b[0;32m18\u001b[0m\n\u001b[0;31m    p = p0 populations+ [p]\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
